--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "next": "13.4.1",
@@ -21,6 +22,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "dotenv-cli": "^7.2.1",
     "prisma": "^4.13.0"
   }
 }
