--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "install": "^0.13.0",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "npm": "^9.6.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
