--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "npm": "^9.6.6",
