--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.2",
     "npm": "^9.6.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
