--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^4.13.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "20.1.1",
+    "@types/nodemailer-sendgrid": "^1.0.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
@@ -24,12 +26,14 @@
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "npm": "^9.6.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/nodemailer": "^6.4.7",
     "dotenv-cli": "^7.2.1",
     "prisma": "^4.13.0"
   }
