--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "eslint-config-next": "13.4.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
+    "next-connect": "^1.0.0-next.4",
     "nodemailer": "^6.9.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "npm": "^9.6.6",
@@ -33,6 +35,7 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
     "dotenv-cli": "^7.2.1",
     "prisma": "^4.13.0"
