--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.342.0",
+    "@aws-sdk/s3-request-presigner": "^3.342.0",
     "@prisma/client": "^4.13.0",
     "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
@@ -18,7 +20,7 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "install": "^0.13.0",
