--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
   "devDependencies": {
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
+    "cssnano": "^6.0.1",
     "dotenv-cli": "^7.2.1",
-    "prisma": "^4.13.0"
+    "prisma": "^4.13.0",
+    "uglify-js": "^3.17.4",
+    "uglifyjs-webpack-plugin": "^2.2.0"
   }
 }
