--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.342.0",
     "@aws-sdk/s3-request-presigner": "^3.342.0",
+    "@aws-sdk/signature-v4-crt": "^3.357.0",
     "@prisma/client": "^4.13.0",
     "@sendgrid/mail": "^7.7.0",
     "@types/bcrypt": "^5.0.0",
