--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "npm": "^9.6.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
