--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "sharp": "^0.32.1",
+    "swr": "^2.2.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
