--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/nodemailer-sendgrid": "^1.0.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@use-gesture/react": "^10.2.27",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.1.0",
