--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-spring": "^9.7.2",
     "sharp": "^0.32.1",
     "swr": "^2.2.0",
     "typescript": "5.0.4"
