--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draggable": "^4.4.5",
     "react-icons": "^4.10.1",
+    "react-resizable": "^3.0.5",
     "react-spring": "^9.7.2",
     "sharp": "^0.32.1",
     "swr": "^2.2.0",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.7",
+    "@types/react-resizable": "^3.0.4",
     "cssnano": "^6.0.1",
     "dotenv-cli": "^7.2.1",
     "prisma": "^4.13.0",
